--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
 		"reinstall": "npm run clean:lib && npm install"
 	},
 	"dependencies": {
+		"@react-navigation/native": "^6.1.6",
+		"@react-navigation/native-stack": "^6.9.12",
 		"react": "18.2.0",
-		"react-native": "0.71.4"
+		"react-native": "0.71.4",
+		"react-native-safe-area-context": "^4.5.0",
+		"react-native-screens": "^3.20.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.20.0",
@@ -30,15 +34,15 @@
 		"@types/react": "^18.0.24",
 		"@types/react-test-renderer": "^18.0.0",
 		"babel-jest": "^29.2.1",
-		"jest": "^29.2.1",
-		"metro-react-native-babel-preset": "0.73.8",
-		"react-test-renderer": "18.2.0",
-		"typescript": "4.8.4",
 		"eslint": "^8.36.0",
 		"eslint-formatter-codeframe": "^7.32.1",
 		"husky": "^8.0.3",
+		"jest": "^29.2.1",
 		"lint-staged": "^13.2.0",
-		"prettier": "^2.8.4"
+		"metro-react-native-babel-preset": "0.73.8",
+		"prettier": "^2.8.4",
+		"react-test-renderer": "18.2.0",
+		"typescript": "4.8.4"
 	},
 	"jest": {
 		"preset": "react-native"
