--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,8 +4,11 @@
 		"es6": true
 	},
 	"parserOptions": {
-		"ecmaVersion": "latest"
+		"ecmaVersion": "latest",
+		"sourceType": "module",
+		"allowImportExportEverywhere": true
 	},
+	"parser": "@babel/eslint-parser",
 	"extends": "eslint:recommended",
 	"rules": {
 		"no-bitwise": "off",
@@ -15,12 +18,6 @@
 		"consistent-return": "off",
 		"import/no-unresolved": "off",
 		"no-mixed-spaces-and-tabs": "off",
-		"no-unused-vars": [
-			"error",
-			{
-				"argsIgnorePattern": "^_",
-				"destructuredArrayIgnorePattern": "^_"
-			}
-		]
+		"no-unused-vars": "off"
 	}
 }
