--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	"dependencies": {
 		"@react-navigation/native": "^6.1.6",
 		"@react-navigation/native-stack": "^6.9.12",
+		"axios": "^1.3.4",
 		"react": "18.2.0",
 		"react-native": "0.71.4",
 		"react-native-safe-area-context": "^4.5.0",
@@ -26,6 +27,7 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.20.0",
+		"@babel/eslint-parser": "^7.21.3",
 		"@babel/preset-env": "^7.20.0",
 		"@babel/runtime": "^7.20.0",
 		"@react-native-community/eslint-config": "^3.2.0",
