--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
 		"consistent-return": "off",
 		"import/no-unresolved": "off",
 		"no-mixed-spaces-and-tabs": "off",
-		"no-unused-vars": "off"
+		"no-unused-vars": "off",
+		"no-undef": "off"
 	}
 }
