--- a/package.json
+++ b/package.json
@@ -19,11 +19,18 @@
 	"dependencies": {
 		"@react-navigation/native": "^6.1.6",
 		"@react-navigation/native-stack": "^6.9.12",
+		"@reduxjs/toolkit": "^1.9.3",
 		"axios": "^1.3.4",
+		"nativewind": "^2.0.11",
 		"react": "18.2.0",
 		"react-native": "0.71.4",
+		"react-native-asset": "^2.1.0",
+		"react-native-radio-buttons-group": "^2.3.2",
 		"react-native-safe-area-context": "^4.5.0",
-		"react-native-screens": "^3.20.0"
+		"react-native-screens": "^3.20.0",
+		"react-navigation-stack": "^2.10.4",
+		"react-redux": "^8.0.5",
+		"redux": "^4.2.1"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.20.0",
@@ -40,10 +47,12 @@
 		"eslint-formatter-codeframe": "^7.32.1",
 		"husky": "^8.0.3",
 		"jest": "^29.2.1",
+		"lightningcss": "^1.19.0",
 		"lint-staged": "^13.2.0",
 		"metro-react-native-babel-preset": "0.73.8",
 		"prettier": "^2.8.4",
 		"react-test-renderer": "18.2.0",
+		"tailwindcss": "^3.2.7",
 		"typescript": "4.8.4"
 	},
 	"jest": {
