--- a/package.json
+++ b/package.json
@@ -17,14 +17,18 @@
 		"reinstall": "npm run clean:lib && npm install"
 	},
 	"dependencies": {
+		"@react-native-community/clipboard": "^1.5.1",
 		"@react-navigation/native": "^6.1.6",
 		"@react-navigation/native-stack": "^6.9.12",
 		"@reduxjs/toolkit": "^1.9.3",
+		"@twotalltotems/react-native-otp-input": "^1.3.11",
 		"axios": "^1.3.4",
+		"luxon": "^3.3.0",
 		"nativewind": "^2.0.11",
 		"react": "18.2.0",
 		"react-native": "0.71.4",
 		"react-native-asset": "^2.1.0",
+		"react-native-date-picker": "^4.2.9",
 		"react-native-radio-buttons-group": "^2.3.2",
 		"react-native-safe-area-context": "^4.5.0",
 		"react-native-screens": "^3.20.0",
@@ -40,6 +44,7 @@
 		"@react-native-community/eslint-config": "^3.2.0",
 		"@tsconfig/react-native": "^2.0.2",
 		"@types/jest": "^29.2.1",
+		"@types/luxon": "^3.2.0",
 		"@types/react": "^18.0.24",
 		"@types/react-test-renderer": "^18.0.0",
 		"babel-jest": "^29.2.1",
