--- a/android/link-assets-manifest.json
+++ b/android/link-assets-manifest.json
@@ -1,53 +1,117 @@
 {
-	"migIndex": 1,
-	"data": [
-		{
-			"path": "src/assets/fonts/OpenSans-Bold.ttf",
-			"sha1": "c23ede86996d8239865bcd04c806e3789aaa0b94"
-		},
-		{
-			"path": "src/assets/fonts/OpenSans-BoldItalic.ttf",
-			"sha1": "21bb3301498eea8b9c5abb1e8a065276105981a0"
-		},
-		{
-			"path": "src/assets/fonts/OpenSans-ExtraBold.ttf",
-			"sha1": "d26cd8614e40a2dda56953b863e255f1c798c245"
-		},
-		{
-			"path": "src/assets/fonts/OpenSans-ExtraBoldItalic.ttf",
-			"sha1": "761181538f88bb8cb16fac503b634e92df17f374"
-		},
-		{
-			"path": "src/assets/fonts/OpenSans-Italic.ttf",
-			"sha1": "051b6b2acbd0e33252870dc28045ba27ae0acd77"
-		},
-		{
-			"path": "src/assets/fonts/OpenSans-Light.ttf",
-			"sha1": "448dbc1e8add1538f788c9e34cdb701ed25ac993"
-		},
-		{
-			"path": "src/assets/fonts/OpenSans-LightItalic.ttf",
-			"sha1": "96925397a2560a1de4cf0984591a37f62aa6e8bb"
-		},
-		{
-			"path": "src/assets/fonts/OpenSans-Medium.ttf",
-			"sha1": "f886dd439250f2a8a7326f3f6b433adf34c96fe8"
-		},
-		{
-			"path": "src/assets/fonts/OpenSans-MediumItalic.ttf",
-			"sha1": "b845bb5a4e11ee484942b4b326d6bec37526933a"
-		},
-		{
-			"path": "src/assets/fonts/OpenSans-Regular.ttf",
-			"sha1": "9a19a459ca7bca15d2de8269b80411f2b4a71ccf"
-		},
-		{
-			"path": "src/assets/fonts/OpenSans-SemiBold.ttf",
-			"sha1": "30fcdd8f737e6a86abda2d643d2f23c5286c4663"
-		},
-		{
-			"path": "src/assets/fonts/OpenSans-SemiBoldItalic.ttf",
-			"sha1": "4c5aa8cc443dc8d478f9126cd2c17720a3eeabfb"
-		}
-	]
+  "migIndex": 1,
+  "data": [
+    {
+      "path": "src/assets/fonts/AntDesign.ttf",
+      "sha1": "4e77868439280fb434d4697c7b911271406c81f3"
+    },
+    {
+      "path": "src/assets/fonts/Entypo.ttf",
+      "sha1": "12b5670eb178138f77285d5f2c246d3cc5fa67d6"
+    },
+    {
+      "path": "src/assets/fonts/EvilIcons.ttf",
+      "sha1": "91d377ea3cf47490b256c2ed081704a7dabdae0c"
+    },
+    {
+      "path": "src/assets/fonts/Feather.ttf",
+      "sha1": "e6604258b1ced5efd51360875d782fca65381d47"
+    },
+    {
+      "path": "src/assets/fonts/FontAwesome.ttf",
+      "sha1": "13b1eab65a983c7a73bc7997c479d66943f7c6cb"
+    },
+    {
+      "path": "src/assets/fonts/FontAwesome5_Brands.ttf",
+      "sha1": "3fa2d67cef22da5c3f3eb5730c6afbd6fecf0372"
+    },
+    {
+      "path": "src/assets/fonts/FontAwesome5_Regular.ttf",
+      "sha1": "7d849a3981a716e2ba4a84634bc57d0b8054a6a3"
+    },
+    {
+      "path": "src/assets/fonts/FontAwesome5_Solid.ttf",
+      "sha1": "c1b9fae262f42868c075ac865a8ab34920e20a2c"
+    },
+    {
+      "path": "src/assets/fonts/Fontisto.ttf",
+      "sha1": "c090a3ec96a3f1bb9b615c2f3f204ce0dcdcdbc3"
+    },
+    {
+      "path": "src/assets/fonts/Foundation.ttf",
+      "sha1": "4b2bce6c792493a4a5716b6fec2dbefe89492c3f"
+    },
+    {
+      "path": "src/assets/fonts/Ionicons.ttf",
+      "sha1": "b5281fbfa43129abc3e412dd938cfcf0b77de999"
+    },
+    {
+      "path": "src/assets/fonts/MaterialCommunityIcons.ttf",
+      "sha1": "4c2a838b00dbb5e8bb1b368fce0de534e8eb241c"
+    },
+    {
+      "path": "src/assets/fonts/MaterialIcons.ttf",
+      "sha1": "1943803d652750c8ec60415f1e57401c70e72d25"
+    },
+    {
+      "path": "src/assets/fonts/Octicons.ttf",
+      "sha1": "56acefc0731f35ee23b195b1c8cb5fa94a0db97b"
+    },
+    {
+      "path": "src/assets/fonts/OpenSans-Bold.ttf",
+      "sha1": "c23ede86996d8239865bcd04c806e3789aaa0b94"
+    },
+    {
+      "path": "src/assets/fonts/OpenSans-BoldItalic.ttf",
+      "sha1": "21bb3301498eea8b9c5abb1e8a065276105981a0"
+    },
+    {
+      "path": "src/assets/fonts/OpenSans-ExtraBold.ttf",
+      "sha1": "d26cd8614e40a2dda56953b863e255f1c798c245"
+    },
+    {
+      "path": "src/assets/fonts/OpenSans-ExtraBoldItalic.ttf",
+      "sha1": "761181538f88bb8cb16fac503b634e92df17f374"
+    },
+    {
+      "path": "src/assets/fonts/OpenSans-Italic.ttf",
+      "sha1": "051b6b2acbd0e33252870dc28045ba27ae0acd77"
+    },
+    {
+      "path": "src/assets/fonts/OpenSans-Light.ttf",
+      "sha1": "448dbc1e8add1538f788c9e34cdb701ed25ac993"
+    },
+    {
+      "path": "src/assets/fonts/OpenSans-LightItalic.ttf",
+      "sha1": "96925397a2560a1de4cf0984591a37f62aa6e8bb"
+    },
+    {
+      "path": "src/assets/fonts/OpenSans-Medium.ttf",
+      "sha1": "f886dd439250f2a8a7326f3f6b433adf34c96fe8"
+    },
+    {
+      "path": "src/assets/fonts/OpenSans-MediumItalic.ttf",
+      "sha1": "b845bb5a4e11ee484942b4b326d6bec37526933a"
+    },
+    {
+      "path": "src/assets/fonts/OpenSans-Regular.ttf",
+      "sha1": "9a19a459ca7bca15d2de8269b80411f2b4a71ccf"
+    },
+    {
+      "path": "src/assets/fonts/OpenSans-SemiBold.ttf",
+      "sha1": "30fcdd8f737e6a86abda2d643d2f23c5286c4663"
+    },
+    {
+      "path": "src/assets/fonts/OpenSans-SemiBoldItalic.ttf",
+      "sha1": "4c5aa8cc443dc8d478f9126cd2c17720a3eeabfb"
+    },
+    {
+      "path": "src/assets/fonts/SimpleLineIcons.ttf",
+      "sha1": "9ffb81a5a11112e292f2cc323e98486bad597599"
+    },
+    {
+      "path": "src/assets/fonts/Zocial.ttf",
+      "sha1": "6a48a962b06cc3acbdfd61df0d9a34744eea5e8d"
+    }
+  ]
 }
