--- a/package.json
+++ b/package.json
@@ -17,7 +17,16 @@
 		"reinstall": "npm run clean:lib && npm install"
 	},
 	"dependencies": {
+		"@ant-design/icons-react-native": "^2.3.2",
+		"@ant-design/react-native": "^5.0.4",
+		"@emotion/react": "^11.10.6",
+		"@emotion/styled": "^11.10.6",
+		"@mui/icons-material": "^5.11.11",
+		"@mui/material": "^5.11.13",
 		"@react-native-community/clipboard": "^1.5.1",
+		"@react-native-cookies/cookies": "^6.2.1",
+		"@react-native-material/core": "^1.3.7",
+		"@react-navigation/bottom-tabs": "^6.5.7",
 		"@react-navigation/native": "^6.1.6",
 		"@react-navigation/native-stack": "^6.9.12",
 		"@reduxjs/toolkit": "^1.9.3",
@@ -28,10 +37,14 @@
 		"react": "18.2.0",
 		"react-native": "0.71.4",
 		"react-native-asset": "^2.1.0",
+		"react-native-curved-bottom-bar": "^3.2.2",
 		"react-native-date-picker": "^4.2.9",
+		"react-native-ionicons": "^4.6.5",
 		"react-native-radio-buttons-group": "^2.3.2",
 		"react-native-safe-area-context": "^4.5.0",
 		"react-native-screens": "^3.20.0",
+		"react-native-svg": "^13.8.0",
+		"react-native-vector-icons": "^9.2.0",
 		"react-navigation-stack": "^2.10.4",
 		"react-redux": "^8.0.5",
 		"redux": "^4.2.1"
@@ -46,6 +59,7 @@
 		"@types/jest": "^29.2.1",
 		"@types/luxon": "^3.2.0",
 		"@types/react": "^18.0.24",
+		"@types/react-native-vector-icons": "^6.4.13",
 		"@types/react-test-renderer": "^18.0.0",
 		"babel-jest": "^29.2.1",
 		"eslint": "^8.36.0",
